Final version without templates

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -498,7 +498,7 @@ justify-self: center;
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%, -50%);
-	background: #e9c6f6;
+  background: linear-gradient(rgb(224, 1, 224), rgb(251, 177, 66));
 	box-shadow: 0px 18px 36px -18px rgba(12, 5, 46, 0.3), 0px 30px 60px -12px rgba(12, 5, 46, 0.25);
 	border-radius: 50%;
 }
@@ -614,8 +614,8 @@ justify-self: center;
   font-family: inherit;
   height:50%;
   font-size: 20px;
-  background: royalblue;
-  color: white;
+  background: rgb(255, 144, 33);
+  color: rgb(0, 0, 0);
   padding: 0.7em 1em;
   padding-left: 0.9em;
   display: flex;
