--- a/src/App.module.css
+++ b/src/App.module.css
@@ -152,11 +152,22 @@ justify-self: center;
 .portfolio_project_thumbnail {
   width: 100%;
   height: 80%;
-
+box-sizing: border-box;
+overflow: hidden;
   display: grid;
   border: 1px grey solid;
   border-radius: 5%;
-  grid-template-rows: 80% 20%;
+ 
+}
+.portfolio_thumb_cont {
+  width:100%;
+  height:100%;
+  position: relative;
+}
+.portfolio_thumb_cont img {
+  width: 100%;
+  max-height: 100%;
+  position: absolute;
 }
 .portfolio_project_thumbnail > div:nth-child(2) {
   width: 100%;
