--- a/src/App.module.css
+++ b/src/App.module.css
@@ -53,7 +53,13 @@ background-color: white;
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-rows: 22% 15% 13% 25%  15% 18%;
+  grid-template-rows: 30% 30% 18% 37%  16% 20%;
+}
+.intro_container_port {
+  width:100%;
+
+  display: grid;
+  grid-template-rows: 50% 50%;
 }
 
 .introduction_container {
@@ -78,7 +84,7 @@ background-color: white;
 justify-self: center;
 object-fit: contain;
   border-radius: 50%;
-height:70%;
+height:60%;
 width:60%
 
 
@@ -111,7 +117,8 @@ width:60%
   display: flex;
   align-items: center;
   transition: cubic-bezier(0.165, 0.84, 0.44, 1) 0.5s;
-  width: 30%;
+  width: 50%;
+
 }
 .introduction_exploration_svg {
   font-size: 30px;
@@ -134,7 +141,7 @@ width:60%
   height: 100%;
 
   display: grid;
-  grid-template-rows: 5% 95%;
+  grid-template-rows: 15% 85%;
 }
 .portfolio_container > div:nth-child(1) {
   width: 100%;
@@ -147,18 +154,22 @@ width:60%
   width: 80%;
   height: 90%;
 
+
+
   display: grid;
   grid-template-columns: 30% 30% 30%;
+
   column-gap: 3%;
-  row-gap: 5%;
+ 
   justify-self: center;
   justify-content: center;
-  align-self: center;
-  align-items: center;
+
+
 }
 .portfolio_project_thumbnail {
   width: 100%;
-  height: 50%;
+  align-self: center;
+  height: 70%;
 box-sizing: border-box;
 overflow: hidden;
   display: grid;
@@ -767,25 +778,27 @@ text-align: center;
   height:100%;
 
   display: grid;
-  grid-template-rows: 1fr 19fr;
+  grid-template-rows: 15% 85%;
 
 }
 .extras_container_title {
   width:100%;
   font-size: 40px;
+
   display: grid;
   justify-content: center;
   align-items: center;
 }
 .extras_details {
   width:100%;
+  height:100%;
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
 .extra_cont {
   width: 25%;
-  height: 50%;
+  height: 80%;
   display: grid;
   text-decoration: none;
   color: black;
@@ -820,7 +833,7 @@ text-align: center;
 .extra_cont > div:nth-child(2) img {
   position: absolute;
   width:100%;
-
+  
   height: 100%;
 }
 .extra_cont:nth-child(3) > div:nth-child(2) img {
