--- a/src/App.module.css
+++ b/src/App.module.css
@@ -53,13 +53,13 @@ background-color: white;
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-rows: 30% 30% 18% 37%  16% 20%;
+  grid-template-rows: 30% 40% 18% 37%  16% 20%;
 }
 .intro_container_port {
   width:100%;
 
   display: grid;
-  grid-template-rows: 50% 50%;
+  grid-template-rows: 65% 35%;
 }
 
 .introduction_container {
@@ -175,7 +175,11 @@ overflow: hidden;
   display: grid;
   border: 1px grey solid;
   border-radius: 5%;
- 
+  transition: cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
+}
+.portfolio_project_thumbnail:hover {
+  transform: scale(1.3);
+  z-index: 999;
 }
 .portfolio_thumb_cont {
   width:100%;
